# MMS

./: .editorconfig  .gitignore  Cargo.toml  README.md  Server.toml  justfile  lefthook.yml  package.json  pnpm-workspace.yaml
apps/backend/: Cargo.toml  README.md
apps/backend/src/: common.rs  handlers.rs  lib.rs  main.rs  settings.rs  utils.rs
apps/backend/src/guards/: auth.rs
apps/backend/src/middlewares/: cors.rs  error_interceptor.rs  mod.rs
apps/backend/src/routes/: mod.rs
apps/backend/src/routes/auth/: auth.rs  mod.rs  user.rs
apps/backend/src/routes/common/: auth.rs  mod.rs  team.rs
apps/frontend/: .env.development  eslint.config.mjs  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/frontend/src/: middleware.ts  server-context.ts
apps/frontend/src/actions/: auth.ts  cache.ts  team.ts
apps/frontend/src/api/: auth.ts
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/constants/: enum.ts  menu.ts  permission.ts  routes.ts  session.ts
crates/migration/src/: lib.rs  m20241028_173251_auth_create_table.rs  m20241114_124406_team.rs  m20241114_124420_team_user.rs  m20241114_124434_user.rs  m20241114_125409_activity_log.rs
crates/service/: Cargo.toml
crates/service/src/: enum_serialize.rs  lib.rs
crates/service/src/_entities/: activity_log.rs  mod.rs  prelude.rs  roles.rs  sea_orm_active_enums.rs  team_roles.rs  team_users.rs  teams.rs  users.rs
crates/service/src/common/: auth_service.rs  mod.rs  team_service.rs  team_user_service.rs  user_service.rs
crates/service/src/utils/: encrypt.rs  jwt.rs  mod.rs
(+35 files in other folders)
