[package]
name = "backend"
authors = ["Seventhse <season.sevent@icloud.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-http = "3.9.0"
actix-settings = "0.8.0"
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
derive_more = { version = "1.0.0", features = ["full"] }
env_logger = "0.11.5"
futures-util = "0.3.30"
log = "0.4.22"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0.132", features = [] }
migration = { path = "../../crates/migration" }
service = { path = "../../crates/service" }
