[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0.132", features = [] }
hmac = "0.12.1"
sha2 = "0.10.8"
jwt = "0.16.0"
bcrypt = "0.15.1"
rand = "0.8.5"

[dependencies.sea-orm]
version = "1.1.0"
features = ["debug-print", "runtime-async-std-native-tls", "sqlx-postgres"]

[dev-dependencies]
tokio = { version = "1.41.0", features = ["macros", "rt"] }
